; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_base.c_nvkm_ltc_zbc_depth_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_base.c_nvkm_ltc_zbc_depth_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_ltc = type { %struct.TYPE_2__*, i32* }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nvkm_ltc_zbc_depth_get(%struct.nvkm_ltc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.nvkm_ltc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.nvkm_ltc* %0, %struct.nvkm_ltc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %4, align 8
  %9 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  store i32 %7, i32* %13, align 4
  %14 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %4, align 8
  %15 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = bitcast {}** %17 to i32 (%struct.nvkm_ltc*, i32, i32)**
  %19 = load i32 (%struct.nvkm_ltc*, i32, i32)*, i32 (%struct.nvkm_ltc*, i32, i32)** %18, align 8
  %20 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 %19(%struct.nvkm_ltc* %20, i32 %21, i32 %22)
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
